modules/gdscript/tests/scripts/analyzer/errors/return_typed_call_in_void_func.gd
func test() -> void:
	return randf()
